# template-bevy

./: Cargo.toml  Makefile  README.md  SETUP.md
.github/workflows/: ci.yml  release.yml
assets/: README.md
assets/audio/: README.md
assets/fonts/: README.md
assets/textures/: README.md
docs/: CI-CD.md  QUICK-START.md  README.md
examples/: basic_usage.rs
src/: lib.rs  main.rs
src/components/: mod.rs
src/game/: mod.rs
src/plugins/: mod.rs
src/resources/: mod.rs
src/states/: mod.rs
src/systems/: auto_movement.rs  camera.rs  collision.rs  mod.rs  movement.rs  obstacle.rs  setup.rs  ui.rs
tests/: integration_tests.rs
