[package]
name = "template-bevy"
version = "0.1.0"
edition = "2021"
authors = ["pnstack"]
description = "A Bevy game template for indie game developers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pnstack/template-bevy"

[dependencies]
bevy = "0.14"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]

[features]
default = []
dev = ["bevy/dynamic_linking"]

# Enable optimizations for dependencies (incl. Bevy) but not for our code
[profile.dev.package."*"]
opt-level = 3

# Enable high optimizations for release builds
[profile.release]
lto = "thin"
codegen-units = 1
